attestor/attestor-chart/templates/signingservice-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: signingservice
spec:
  selector:
    app: signingservice
  ports:
    - port: 8080
      targetPort: 8080
