attestor/attestor-chart/templates/networkpolicy-signing.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-chain-to-sign
spec:
  podSelector:
    matchLabels:
      app: signingservice
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: chainservice
    ports:
    - protocol: TCP
      port: 8080
